# SPDX-License-Identifier: BSD-3-Clause

libpanko_srcs += files([
	'errcodes.cc',
	'paths.cc',
	'strutils.cc',
])

libpanko_core_headers = files([
	'errcodes.hh',
	'integers.hh',
	'mmap.hh',
	'paths.hh',
	'strutils.hh',
	'types.hh',
	'units.hh',
])

install_headers(libpanko_core_headers, subdir: 'panko/core')
